# EG_v2

./: .replit  INSTALLATION.md  app.py  build_package.py  build_unix.sh  build_windows.bat  csv_ingest.py  database.py  email_guardian.db  fix_cases_table.py  ml_models.py  ml_processor.py  models.py  outlook_followup.py  package_config.json  processor.py  pyproject.toml  replit.md  report_generator.py  reports.py  requirements_packaging.txt  routes.py  user_actions.py
data/: .gitkeep  dummy_email_data_with_domains_and_ms.csv  sample_emails.csv
logs/: .gitkeep
ml_models/: .gitkeep  email_classifier.pkl  vectorizer.pkl
reports/: .gitkeep
static/css/: custom.css
static/js/: charts.js  dashboard.js
templates/: admin_panel.html  admin_rules.html  analytics.html  base.html  base_backup.html  base_corrupted.html  cases.html  cleared_emails.html  dashboard.html  emails.html  escalated_emails.html  excluded_whitelisted.html  flagged_senders.html  import_data.html  main_dashboard.html  reports.html  user_activity.html
